# kiwiPlayer

./: README.md
AudioVideo/: settings.gradle
AudioVideo/app/: CMakeLists.txt  build.gradle
AudioVideo/app/src/main/: AndroidManifest.xml
AudioVideo/app/src/main/cpp/: native-lib.cpp  tutorial01.cpp  tutorial01.h  tutorial02.cpp  tutorial02.h
AudioVideo/app/src/main/java/com/zpw/audiovideo/: MainActivity.java  MyApp.java  XPlay.java
AudioVideo/app/src/main/java/com/zpw/audiovideo/execise1/: CustomView.java  Execise1Activity.java
AudioVideo/app/src/main/java/com/zpw/audiovideo/execise10/: Execise10Activity.java  IPlayerCallBack.java  PlayerView.java  VideoPlayer.java
AudioVideo/app/src/main/java/com/zpw/audiovideo/execise11/: CameraRecorder.java  Execise11Activity.java
AudioVideo/app/src/main/java/com/zpw/audiovideo/execise11/base/: BaseFilter.java  BaseGLSL.java
AudioVideo/app/src/main/java/com/zpw/audiovideo/execise11/core/: FrameBuffer.java  IObservable.java  IObserver.java  Observable.java  RenderBean.java  Renderer.java
AudioVideo/app/src/main/java/com/zpw/audiovideo/execise11/egl/: EGLConfigAttrs.java  EGLContextAttrs.java  EglHelper.java
AudioVideo/app/src/main/java/com/zpw/audiovideo/execise11/filter/: GroupFilter.java  LazyFilter.java  OesFilter.java  WaterMarkFilter.java
AudioVideo/app/src/main/java/com/zpw/audiovideo/execise12/: BaseFilter.java  BaseGLSL.java  BaseGLSurfaceView.java  CameraView.java  Execise12Activity.java  GLCamera.java  GLCameraDrawer.java  ICamera.java  OesFilter.java
AudioVideo/app/src/main/java/com/zpw/audiovideo/execise19/: Execise19Activity.java  IMDisplay.java  IMPlayListener.java  IMPlayer.java  MPlayer.java  MPlayerException.java  MinimalDisplay.java
AudioVideo/app/src/main/java/com/zpw/audiovideo/execise2/: Execise2Activity.java  PCMFileToWAVFile.java  WindEar.java
AudioVideo/app/src/main/java/com/zpw/audiovideo/execise20/: CameraHelper.java  Execise20Activity.java  MediaCodecWrapper.java
AudioVideo/app/src/main/java/com/zpw/audiovideo/execise3/: CameraPreview.java  CameraPreview2.java  Execise3Activity.java
AudioVideo/app/src/main/java/com/zpw/audiovideo/execise4/: Execise4Activity.java
AudioVideo/app/src/main/java/com/zpw/audiovideo/execise5/: Execise5Activity.java  MyGLRenderer.java  MyGLSurfaceView.java  Triangle.java
AudioVideo/app/src/main/java/com/zpw/audiovideo/execise6/: BaseGLSL.java  BaseGLSurfaceView.java  Execise6Activity.java  ImageGLSurfaceView.java  ImageRenderer.java
AudioVideo/app/src/main/java/com/zpw/audiovideo/execise7/: AACDecoderUtil.java  ADTSUtils.java  Execise7Activity.java  LogUtils.java  MyAudioTrack.java  ReadAACFileThread.java
AudioVideo/app/src/main/java/com/zpw/audiovideo/execise8/: AvcEncoder.java  Execise8Activity.java
AudioVideo/app/src/main/java/com/zpw/audiovideo/execise9/: CameraHelper.java  CameraPreview.java  Execise9Activity.java  VideoRecordFragment.java
AudioVideo/app/src/main/res/layout/: activity_exercise1.xml  activity_exercise10.xml  activity_exercise12.xml  activity_exercise19.xml  activity_exercise2.xml  activity_exercise20.xml  activity_exercise4.xml  activity_exercise8.xml  activity_exercise9.xml  activity_main.xml  activity_tutorial3.xml  frag_video_record.xml
AudioVideo/app/src/main/res/values/: strings.xml
(+38 files in other folders)
